# spaceborn-website

./: package-lock.json  package.json  pnpm-lock.yaml
app/: page.tsx
backend/: .gitignore  celery_config.py  pyproject.toml  requirements.txt
backend/api/: celery_init.py  mail.py  models.py  permissions.py  serializers.py  task.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_age_alter_user_alternative_email_id_and_more.py
backend/drone/: celery_init.py  settings.py  urls.py  views.py  wsgi.py
backend/drone/api/: models.py  urls.py
backend/drone/drone/: asgi.py  settings.py  urls.py
components/: AboutSection.tsx  HeroSection.tsx
components/backgrounds/: Stars.tsx
components/cards/ProfileCard/: ProfileCard.css
components/effects/: ParallaxCardEffect.tsx
components/sections/: AboutSection.tsx  ContactSection.tsx  Footer.tsx  HeroSection.tsx  Navigation.tsx  ProductsSection.tsx  TeamSection.tsx  page.tsx
frontend/: README.md  STYLE_GUIDE.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AboutSection.tsx  ContactSection.tsx  Footer.tsx  FounderSection.tsx  GalaxyBackground.tsx  HeroSection.tsx  ModelViewer.tsx  Navigation.tsx  ProductsSection.tsx  TeamSection.tsx
frontend/components/ProfileCard/: ProfileCard.css
