[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "django>=5.2.8",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "httpx>=0.28.1",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "rest-framework-simplejwt>=0.0.2",
]
